# WDCable_flutter

./: .gitignore  JSON_MESSAGING_GUIDE.md  LICENSE  README.md  RELEASING.md  SPEED_TEST_PROTOCOL.md  connection_imp_plan.md  connection_tips.txt  pubspec.yaml  todo.md
.github/workflows/: android-release.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  wdcable_opus_jni.cpp
android/app/src/main/jniLibs/: README.md
android/app/src/main/res/xml/: file_paths.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 1001.txt  6001.txt
lib/: main.dart  wifi_direct_service.dart  windows_msix_manager.dart
lib/controllers/: wifi_direct_controller.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
lib/models/: wifi_direct_models.dart
lib/providers/: language_provider.dart
lib/services/: data_manager.dart
lib/theme/: theme_provider.dart
lib/utils/: app_logger.dart
lib/widgets/: audio_tab.dart  chat_tab.dart  connection_tab.dart  file_transfer_tab.dart  settings_tab.dart  setup_required_page.dart  speed_test_tab.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
test/: wifi_direct_state_test.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  network_service.cpp  network_service.h  utils.cpp  utils.h  wifi_direct_manager.cpp  wifi_direct_manager.h
(+91 files in other folders)
